Igor_Romacnhyk-hw_1--GIT

--- a/scc/collective.css
+++ b/scc/collective.css
@@ -2,7 +2,7 @@
     width: 100%;
 }
 
-.collective__body {
+#collective__body {
     display: flex;
     justify-content: center;
     margin: 0 -15px;
