--- a/scc/features.css
+++ b/scc/features.css
@@ -2,12 +2,12 @@
     width: 100%;
 }
 
-.features__wrapper {
+#features__wrapper {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     margin: 0 -15px;
-    padding: 120px 0;
+    padding: 120px 0 46px;
 }
 
 .features__card {
