--- a/scc/media.css
+++ b/scc/media.css
@@ -1,5 +1,5 @@
 @media screen and (max-width: 1200px) {
-    .collective__body {
+    #collective__body {
         flex-wrap: wrap;
     }
 
@@ -62,7 +62,7 @@
         margin-bottom: 100px;
     }
 
-    .photo__body {
+    #photo__body {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 2px;
@@ -212,7 +212,7 @@
         margin: 60px 0 0 40px;
     }
 
-    .quote__body {
+    #quote__body {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: 1fr;
